--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: rgba(0, 0, 255, 0.484);
+}
+
+.bg-color{
+    background-color: cornflowerblue;
+}
